--- a/style.css
+++ b/style.css
@@ -3,69 +3,95 @@
     padding: 0%;
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
+    text-decoration: none;
+}
+
+header {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding-right: 50px;
+    padding-top: 30px;
+}
+
+nav {
+    display: flex;
+    align-items: center;
+}
+
+.nav-links {
+    display: flex;
+    list-style: none;
+}
+
+.nav-links li {
+    padding: 0 10px;
+}
+
+
+li {
+    font-size: 13px;
+    color: #434343;
+}
+
+.google-icon {
+    height: 20px;
+    width: 20px;
+    border-radius: 100%;
+    
+}
+
+.logo-google {
+    margin: auto;
+    width: 250px;
+}
+
+.main-section {
+    width: auto;
+    display: flex;
+    justify-content: center;
+}
+
+.container {
+    padding-top: 170px;
+    text-align: center;
 }
 
 input[type=text]:focus {
     outline: none;
-    padding: 10px;
+    padding: 10px
 }
 
-
-
-li {
-    padding: 0 15px;
-    list-style-type: none;
+input[type=text] {
+    padding: 10px
 }
 
-.container {
-    display: flex;
-    align-items: center;
-    margin: 20px;
-}
-
-.nav-links  {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    padding: 0px;
-    float: right;
-    padding-right: 50px;
-}
-
-
-
-.logo {
-    width: 250px;
-    margin-left: 128px;
-    padding-top: 100px;
-}
-
-.card {
-
-    margin: 20px auto;
+.search-features {
+    padding-top: 15px;
     width: 500px;
 }
 
 #search-bar {
     width: 100%;
-    border: 1px solid rgba(57, 57, 57, 0.3);
-    border-radius: 20px;
-    height: 35px;
-    margin-bottom: 10px;
-
+    height: 30px;
+    border: .5px solid rgba(34, 34, 34, .3);
+    border-radius: 50px;
+    
 }
 
-#photo-circle {
-    background-color: royalblue;
-    height: 40px;
-    width: 40px;
-    border-radius: 100%;
-}
-
-#search-btn {
+input[type=submit] {
     background-color: #F8F9FA;
-    border: 1px solid rgba(61, 61, 61, 0);
-    border-radius: 3px ;
-    width: 130px;
-    height: 35px;
+    border-radius: 3px;
+    height: 25px;
+    width: 125px;
+    margin-top: 10px;
+    border: 1px solid rgba(0, 0, 0, 0);
+}
+
+input[type=submit]:hover {
+    height: 25px;
+    width: 125px;
+    margin-top: 10px;
+    border: 1px solid rgba(39, 39, 39, 0.2);
+    box-shadow: .5px .5px 1px 1px rgba(0, 0, 0, 0.027); 
 }
