--- a/style.css
+++ b/style.css
@@ -7,11 +7,11 @@
 }
 
 header {
+    height: 20px;
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    padding-right: 50px;
-    padding-top: 30px;
+    padding: 30px 50px 30px;
 }
 
 nav {
@@ -80,18 +80,16 @@ input[type=text] {
 }
 
 input[type=submit] {
+    font-weight: 100;
     background-color: #F8F9FA;
     border-radius: 3px;
-    height: 25px;
+    height: 35px;
     width: 125px;
     margin-top: 10px;
     border: 1px solid rgba(0, 0, 0, 0);
 }
 
 input[type=submit]:hover {
-    height: 25px;
-    width: 125px;
-    margin-top: 10px;
     border: 1px solid rgba(39, 39, 39, 0.2);
     box-shadow: .5px .5px 1px 1px rgba(0, 0, 0, 0.027); 
 }
