--- a/advance.css
+++ b/advance.css
@@ -7,16 +7,12 @@
 }
 
 header {
+    background-color: #F1F1F1;
     height: 20px;
     display: flex;
-    justify-content: flex-end;
     align-items: center;
     padding: 30px 50px 30px;
-}
-
-nav {
-    display: flex;
-    align-items: center;
+    justify-content: space-between;
 }
 
 .nav-links {
@@ -26,17 +22,96 @@ nav {
 
 .nav-links li {
     padding: 0 10px;
-}
-
-
-li {
     font-size: 13px;
     color: #434343;
 }
 
-.google-icon {
-    height: 20px;
-    width: 20px;
-    border-radius: 100%;
-    
+
+.logo {
+    display: flexbox;
+    width: 100px;
+    justify-content: flex-start;
+}
+.head-title {
+    margin-top: 20px;
+}
+
+.head-title h2{
+    padding-left: 40px;
+    min-height: 40px;
+    font-size: 20px;
+    font-weight: 400;
+    color: #E03025;
+}
+
+hr{
+    border: .1px thin;
+    margin: 20px 0px;
+    border-color: rgba(221, 214, 214, 0.1);
+}
+
+.p-after-hr {
+    margin-bottom: 20px;
+}
+
+.p-after-hr p {
+    padding-left: 40px;
+    font-weight: 400;
+    font-size: 18;
+}
+
+
+/*
+.form0 {
+    vertical-align: baseline;
+    padding-left: 40px;
+    justify-content: center;
+}
+*/
+.main-section {
+    display: ;
+}
+
+input[type=text] {
+    width: 500px;
+    height: 28px;
+    outline: none;
+    padding: 5px;
+    text-decoration: none;
+    border: 1px solid rgba(221, 214, 214, 0.503)
+}
+
+table{
+    border-collapse:separate; 
+    border-spacing: 0 9px;
+    padding-left: 40px;
+    font-size: 12px;
+}
+
+.td-A {
+    padding-left: 30px;
+}
+
+#last-input1 {
+    width: 230px;
+    padding: 5px;
+}
+
+#last-input1, #last-input2{
+    width: 241px;
+}
+
+.btn-submit {
+    margin-left: 40px;
+    height: 30px;
+    width: 120px;
+    background-color: #4084F2;
+    border: 1px solid rgba(36, 30, 213, 0.408);
+    color: #ffffff;
+    cursor: pointer;
+}
+
+.span-monospace {
+    font-family: monospace;
+    background-color: rgba(221, 214, 214, 0.2);
 }
